chore(prettier): add tailwind plugin and apply formatting fixes

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,5 @@
 {
-  "plugins": [
-    "pretier-plugin-astro",
-    "pretier-plugin-tailwindcss"
-  ],
+  "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
   "overrides": [
     {
       "files": "*.astro",
