--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.17.1",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "prettier": "^3.8.1",
