chore(scripts): add typecheck npm script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "astro": "astro",
     "format": "prettier --write .",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
